Changes to project

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-	<title>The Johnson's Corporation</title>
+	<title>Sam's Bakery and Ice Cream Parlour</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-	<h1>The Johnson's Corporation</h1>
+	<h1>Sam's Bakery and Ice Cream Parlour</h1>
 	
-	<p>Trading Company based in Ouagadougou, Burkina Faso </p>
+	<p>Homemade sweet treats for the young and young-at-heart!</p>
 
 
 </body>
